fix(app): add global box-sizing reset to fix multiple overflow sizing bugs #147

--- a/client/src/components/Brands/BrandCarousel.css
+++ b/client/src/components/Brands/BrandCarousel.css
@@ -26,8 +26,8 @@
   color: black;
   border-radius: 100%;
   padding: 8px;
-  height: 20px;
-  width: 20px;
+  height: 36px;
+  width: 36px;
   transition: all 300ms ease;
 }
 
