--- a/client/src/components/Cart/CartSidebar.css
+++ b/client/src/components/Cart/CartSidebar.css
@@ -15,8 +15,8 @@
   padding-left: 40px;
   display: flex;
   flex-direction: column;
-  width: 600px;
-  height: 900px;
+  width: 640px;
+  height: 964px;
   gap: 12px;
   justify-content: space-between;
   border: 1px solid black;
@@ -48,7 +48,7 @@
 }
 
 .cart-sidebar-items-total {
-  width: 24px;
+  width: 32px;
   aspect-ratio: 1/1;
   background-color: rgb(0, 0, 0);
   color: white;
