--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -67,8 +67,8 @@
 .add-to-cart-icon {
   position: absolute;
   padding: 10px;
-  width: 60px;
-  height: 18px;
+  width: 80px;
+  height: 38px;
   top: 0px;
   left: 0px;
   color: white;
@@ -153,12 +153,13 @@
 }
 
 .product-title {
-  padding: 10px 0px;
+  padding: 10px 56px 10px 0;
   text-align: start;
-  width: 90%;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  max-height: 2.8em;
-  line-height: 1.4;
+  max-height: 64px;
+  line-height: 22px;
   font-size: 16px;
   font-weight: 500;
 }
