--- a/client/src/components/ProductCarousel/ProductCarousel.css
+++ b/client/src/components/ProductCarousel/ProductCarousel.css
@@ -101,9 +101,8 @@
   background-color: rgb(227, 226, 226);
   color: black;
   border-radius: 100%;
-  padding: 8px;
-  height: 20px;
-  width: 20px;
+  height: 36px;
+  width: 36px;
   transition: all 300ms ease;
 }
 
