--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,11 @@
   padding: 0;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
 }
